fix attributes and apply to sample

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,24 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
+        app:baselineColor="@color/colorAccent"
+        app:baselineStroke="2dp"
+        app:edgeSerifColor="@color/colorAccent"
+        app:edgeSerifStroke="2dp"
+        app:primarySerifColor="@color/colorPrimaryDark"
+        app:primarySerifStroke="2dp"
+        app:secondarySerifColor="@color/colorPrimary"
+        app:secondarySerifStroke="2dp"
+        app:primaryTextColor="@color/colorAccent"
+        app:primaryTextSize="9sp"
+        app:secondaryTextColor="@color/colorPrimary"
+        app:secondaryTextSize="9sp"
+        app:edgeHeight="10dp"
+        app:primarySerifHeight="10dp"
+        app:secondarySerifHeight="10dp"
+        app:trackColor="@color/colorPrimary"
+        app:cursorColor="@color/colorAccent"
+        app:cursorWidth="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
