--- a/timeline/src/main/res/values/attrs.xml
+++ b/timeline/src/main/res/values/attrs.xml
@@ -2,20 +2,22 @@
 <resources>
     <declare-styleable name="TimelineView">
         <attr name="baselineColor" format="color" />
-        <attr name="baselineStroke" format="float" />
+        <attr name="baselineStroke" format="dimension" />
         <attr name="edgeSerifColor" format="color" />
-        <attr name="edgeSerifStroke" format="float" />
-        <attr name="mainSerifColor" format="color" />
-        <attr name="mainSerifStroke" format="float" />
+        <attr name="edgeSerifStroke" format="dimension" />
+        <attr name="primarySerifColor" format="color" />
+        <attr name="primarySerifStroke" format="dimension" />
         <attr name="secondarySerifColor" format="color" />
-        <attr name="secondarySerifStroke" format="float" />
-        <attr name="mainTextColor" format="color" />
-        <attr name="mainTextSize" format="float" />
-        <attr name="edgeHeight" format="integer" />
-        <attr name="primarySerifHeight" format="integer" />
-        <attr name="secondarySerifHeight" format="integer" />
+        <attr name="secondarySerifStroke" format="dimension" />
+        <attr name="primaryTextColor" format="color" />
+        <attr name="primaryTextSize" format="dimension" />
+        <attr name="secondaryTextColor" format="color" />
+        <attr name="secondaryTextSize" format="dimension" />
+        <attr name="edgeHeight" format="dimension" />
+        <attr name="primarySerifHeight" format="dimension" />
+        <attr name="secondarySerifHeight" format="dimension" />
         <attr name="trackColor" format="color" />
         <attr name="cursorColor" format="color" />
-        <attr name="cursorWidth" format="float" />
+        <attr name="cursorWidth" format="dimension" />
     </declare-styleable>
 </resources>
