--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,9 @@
         app:cursorWidth="1dp"
         app:primaryTextMargin="4dp"
         app:secondaryTextMargin="4dp"
+        app:channelsMarginTop="8dp"
+        app:channelHeight="10dp"
+        app:channelMargin="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
