--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
         app:primaryTextSize="9sp"
         app:secondaryTextColor="@color/colorPrimary"
         app:secondaryTextSize="9sp"
-        app:edgeHeight="10dp"
+        app:edgePrimaryHeight="12dp"
+        app:edgeSecondaryHeight="12dp"
         app:primarySerifHeight="10dp"
         app:secondarySerifHeight="10dp"
         app:trackColor="@color/colorPrimary"
