--- a/timeline/src/main/res/values/attrs.xml
+++ b/timeline/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="TimelineView">
+    <declare-styleable name="Timeline">
         <attr name="baselineColor" format="color" />
         <attr name="baselineStroke" format="dimension" />
         <attr name="edgeSerifColor" format="color" />
