create timeline background

--- a/timeline/src/main/res/values/attrs.xml
+++ b/timeline/src/main/res/values/attrs.xml
@@ -25,5 +25,6 @@
         <attr name="channelsMarginTop" format="dimension" />
         <attr name="channelHeight" format="dimension" />
         <attr name="channelMargin" format="dimension" />
+        <attr name="backgroundTimeline" format="color" />
     </declare-styleable>
 </resources>
